2008-07-22  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeBuilder.cs (get_umarshal): Add support for all 
	MarshalAsAttribute fields to fix the build.
	
	* CustomAttributeBuilder.cs (get_umarshal): Decode enums properly.

2008-07-21  Marek Safar  <marek.safar@gmail.com>

	* ParameterBuilder.cs, CustomAttributeBuilder.cs: Check for
	UnmanagedType.ByValArray to be used only on fields.

2008-07-16  Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInst.cs: Special case all methods
	under compiler context as needed by mcs. 

	* MethodBuilder.cs: Change the visibility of some fields
	to internal so MethodOnTypeBuilderInst can use it.

2008-07-11  Marek Safar  <marek.safar@gmail.com>

	* ModuleBuilder.cs: Couple of micro optimizations.

2008-07-03  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* SignatureHelper.cs: Fix parameter names
	* ModuleBuilder.cs: Fix parameter names

2008-06-18 Rodrigo Kumpera <rkumpera@novell.com>

	* TypeBuilder.cs (IsAssignableTo): Fixed check for interfaces
	defined on parent. Based on Geoff's Norton patch.
	Fixes #349194.

2008-06-12  Marek Safar  <marek.safar@gmail.com>

	* MethodBuilder.cs: Removed SetGenericMethodSignature.

2008-06-06  Jb Evain  <jbevain@novell.com>

	* OpCodes.cs: OpCode constrained. is of type InlineType.

2008-05-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeBuilder.cs (IsAssignableTo): When an interface is passed as
	argument and the TypeBuilder has been created, also check if parent
	can be assigned to type.

2008-05-15  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (.ctor): Convert a null parent to typeof (object) here, not just
	in CreateType (). Fixes #389171.

2008-05-11  Gert Driesen  <drieseng@users.sourceforge.net>

	* FieldBuilder.cs: Added null check for type.
	* TypeBuilder.cs: For enums, construct UnderlyingSystemType when
	first instance field is defined instead of having to lookup it up on
	demand. Avoid cast in IsCompilerContext.
